--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,101 @@ color: #555;
     background: radial-gradient(#fff,#ffd6d6);
 }
 
+.menu-icon{
+    width: 28px;
+    margin-left: 20px;
+    display: none;
+}
+
+/* ------Media Query for menu----------- */
+
+@media only screen and (max-width:1000px){
+    nav ul{
+        position: absolute;
+        top: 70px;
+        left: 0;
+        background: #333;
+        width: 100%;
+        overflow: hidden;
+        transition: max-height 0.5s;
+        /* border: solid red; */
+    }
+    nav ul li{
+    display: block;
+    margin-right: 50px;
+    margin-top:10px ;
+    margin-bottom: 10px;
+    }
+    nav ul li a{
+        color: white;
+    }
+    .menu-icon{
+        display: inline-block;
+        cursor: pointer;
+    }
+}
+
+/* ------Media Query for less 600 ----------- */
+@media only screen and (max-width:700px){
+    .row{
+        text-align: center;
+    }
+}
+
+
+
+
+
+
+/* ----------------All Products-------------------- */
+.row-2{
+    display: flex;
+    justify-content: space-between;
+    margin: 100px auto 50px;
+}
+select{
+    border: 1px solid #ff523b;
+    
+}
+
+select:focus{
+outline: none;
+}
+
+.page-btn{
+    margin: 0 auto 80px;
+}
+.page-btn span{
+display: inline-block;
+border: 1px solid #ff523b;
+margin-left: 10px;
+width: 40px;
+height: 40px;
+text-align: center;
+line-height: 40px;
+cursor: pointer;
+}
+.page-btn span:hover{
+background: #ff523b;
+color: white;
+}
+
+
+/* -----------single product------------- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -109,7 +204,7 @@ transition: transform 0.6s;
 /* testimonial */
 .testimonial{
 padding-top: 100px; 
-margin: 20px 200px;  
+margin: 20px;  
 }
 
 .testimonial .col-lg-4 .card{
