add more updates

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+a{
+    text-decoration: none;
+}
 
 body
 {
@@ -127,16 +130,94 @@ color: white;
 }
 
 
-/* -----------single product------------- */
+/* -----------Cart items details------------- */
+
+th{
+text-align: left;
+padding: 5px;
+color: white;
+background: #ff523b;
+font-weight: normal;
+}
+td{
+    margin-bottom: 10px;
+    padding: 10ox 5px;
+}
+td input{
+    width: 60px;
+    height: 40px;
+    padding: 5px;
+}
+td a{
+    color: #ff523b;
+    font-size: 12px;
+}
+td img{
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
+}
 
 
+/* -------------------------account-page------------------ */
+.account-page
+{
+    background: radial-gradient(#fff,#ffd6d6);
+    padding: 50px 0;
+}
+.form-container{
+    background: #fff;
+    width: 300px;
+    height: 400px;
+    position: relative;
+    text-align: center;
+    padding: auto;
+    margin: auto;
+    box-shadow:0 0 20px 0px rgba(0,0,0,0.1);
+    overflow: hidden;
+}
 
+.form-container span{
+    font-weight: bold;
+    padding: 0 10px;
+    color: #555;
+    cursor: pointer;
+    width: 100px;
+    display: inline-block;
+}
+.form-btn{
+    display: inline-block;
 
-
-
-
-
-
+}
+.form-container form{
+    max-width: 300px;
+    padding: 0 20px;
+    position: absolute;
+    top: 130px;
+    transition: transform 1s;
+}
+form input{
+    width: 100%;
+    height: 30px;
+    margin: 10px 0;
+    padding: 0 10px;
+    border: 1px solid #ccc;
+}
+#LoginForm{
+    left: -300px;
+}
+#RegForm{
+    left: 0;
+}
+#Indicator{
+    width: 100px;
+    border: none;
+    background: #ff523b;
+    height: 3px;
+    margin-top: 8px;
+    transform: translateX(100px);
+    transition: transform 1s;
+}
 
 
 
